--- a/openApiDocs/beta/DeviceManagement.Administration.yml
+++ b/openApiDocs/beta/DeviceManagement.Administration.yml
@@ -15367,11 +15367,7 @@ paths:
     get:
       tags:
         - deviceManagement.virtualEndpoint
-      summary: List cloudPcFrontLineServicePlans
-      description: Get a list of the cloudPcFrontLineServicePlan objects and their properties.
-      externalDocs:
-        description: Find more info here
-        url: https://learn.microsoft.com/graph/api/virtualendpoint-list-frontlineserviceplans?view=graph-rest-1.0
+      summary: Get frontLineServicePlans from deviceManagement
       operationId: deviceManagement.virtualEndpoint_ListFrontLineServicePlan
       parameters:
         - $ref: '#/components/parameters/top'
@@ -15460,11 +15456,7 @@ paths:
     get:
       tags:
         - deviceManagement.virtualEndpoint
-      summary: Get cloudPcFrontLineServicePlan
-      description: Get the properties and relationships of a cloudPcFrontLineServicePlan object.
-      externalDocs:
-        description: Find more info here
-        url: https://learn.microsoft.com/graph/api/cloudpcfrontlineserviceplan-get?view=graph-rest-1.0
+      summary: Get frontLineServicePlans from deviceManagement
       operationId: deviceManagement.virtualEndpoint_GetFrontLineServicePlan
       parameters:
         - name: cloudPcFrontLineServicePlan-id
@@ -18485,7 +18477,7 @@ paths:
     get:
       tags:
         - deviceManagement.virtualEndpoint
-      summary: List cloudPcSharedUseServicePlans (deprecated)
+      summary: List cloudPcSharedUseServicePlans
       description: Get a list of the cloudPcSharedUseServicePlan objects and their properties. This API is available in the following national cloud deployments.
       externalDocs:
         description: Find more info here
@@ -18590,7 +18582,7 @@ paths:
     get:
       tags:
         - deviceManagement.virtualEndpoint
-      summary: Get cloudPcSharedUseServicePlan (deprecated)
+      summary: Get cloudPcSharedUseServicePlan
       description: Read the properties and relationships of a cloudPcSharedUseServicePlan object. This API is available in the following national cloud deployments.
       externalDocs:
         description: Find more info here
@@ -21455,7 +21447,6 @@ components:
               type: array
               items:
                 $ref: '#/components/schemas/microsoft.graph.cloudPcFrontLineServicePlan'
-              description: Front-line service plans for a Cloud PC.
               x-ms-navigationProperty: true
             galleryImages:
               type: array
@@ -21489,6 +21480,7 @@ components:
               type: array
               items:
                 $ref: '#/components/schemas/microsoft.graph.cloudPcSharedUseServicePlan'
+              description: Cloud PC shared-use service plans.
               x-ms-navigationProperty: true
             snapshots:
               type: array
@@ -21759,20 +21751,17 @@ components:
           properties:
             displayName:
               type: string
-              description: 'The display name of the front-line service plan. For example, 2vCPU/8GB/128GB Front-line or 4vCPU/16GB/256GB Front-line.'
               nullable: true
             totalCount:
               maximum: 2147483647
               minimum: -2147483648
               type: integer
-              description: The total number of front-line service plans purchased by the customer.
               format: int32
               nullable: true
             usedCount:
               maximum: 2147483647
               minimum: -2147483648
               type: integer
-              description: The number of service plans that have been used for the account.
               format: int32
               nullable: true
           additionalProperties:
@@ -25288,7 +25277,7 @@ components:
               nullable: true
             appId:
               type: string
-              description: 'The unique identifier for the associated application (its appId property). Alternate key. Supports $filter (eq, ne, not, in, startsWith).'
+              description: 'The unique identifier for the associated application (its appId property). Supports $filter (eq, ne, not, in, startsWith).'
               nullable: true
             applicationTemplateId:
               type: string
@@ -28298,7 +28287,7 @@ components:
               items:
                 type: string
                 nullable: true
-              description: List of host names for the device.
+              description: List of hostNames for the device.
             isCompliant:
               type: boolean
               description: 'true if the device complies with Mobile Device Management (MDM) policies; otherwise, false. Read-only. This can only be updated by Intune for any device OS type or by an approved MDM app for Windows OS devices. Supports $filter (eq, ne, not).'
@@ -28309,7 +28298,7 @@ components:
               nullable: true
             isManagementRestricted:
               type: boolean
-              description: 'Indicates whether the device is a member of a restricted management administrative unit, in which case it requires a role scoped to the restricted administrative unit to manage. The default value is false. Read-only.  To manage a device that''s a member of a restricted administrative unit, the calling app must be assigned the Directory.Write.Restricted permission. For delegated scenarios, the administrators must also be explicitly assigned supported roles at the restricted administrative unit scope.'
+              description: 'true if the device is a member of a restricted management administrative unit, in which case it requires a role scoped to the restricted administrative unit to manage. Default value is false. Read-only.  To manage a device that''s a member of a restricted administrative unit, the calling app must be assigned the Directory.Write.Restricted permission. For delegated scenarios, the administrators must also be explicitly assigned supported roles at the restricted administrative unit scope.'
               nullable: true
             isRooted:
               type: boolean
@@ -28331,7 +28320,6 @@ components:
               nullable: true
             onPremisesSecurityIdentifier:
               type: string
-              description: The on-premises security identifier (SID) for the user who was synchronized from on-premises to the cloud. Read-only. Returned only on $select. Supports $filter (eq).
               nullable: true
             onPremisesSyncEnabled:
               type: boolean
@@ -28367,27 +28355,27 @@ components:
               description: 'List of labels applied to the device by the system. Supports $filter (/$count eq 0, /$count ne 0).'
             trustType:
               type: string
-              description: 'Type of trust for the joined device. Read-only. Possible values: Workplace (indicates bring your own personal devices), AzureAd (Cloud only joined devices), ServerAd (on-premises domain joined devices joined to Azure AD). For more details, see Introduction to device management in Azure Active Directory.'
+              description: 'Type of trust for the joined device. Read-only. Possible values: Workplace (indicates bring your own personal devices), AzureAd (Cloud only joined devices), ServerAd (on-premises domain joined devices joined to Azure AD). For more details, see Introduction to device management in Azure Active Directory'
               nullable: true
             kind:
               type: string
-              description: Form factor of the device. Only returned if the user signs in with a Microsoft account as part of Project Rome.
+              description: Form factor of device. Only returned if user signs in with a Microsoft account as part of Project Rome.
               nullable: true
             manufacturer:
               type: string
-              description: Manufacturer of the device. Only returned if the user signs in with a Microsoft account as part of Project Rome.
+              description: Manufacturer of device. Only returned if user signs in with a Microsoft account as part of Project Rome.
               nullable: true
             model:
               type: string
-              description: Model of the device. Only returned if the user signs in with a Microsoft account as part of Project Rome.
+              description: Model of device. Only returned if user signs in with a Microsoft account as part of Project Rome.
               nullable: true
             name:
               type: string
-              description: Friendly name of the device. Only returned if user signs in with a Microsoft account as part of Project Rome.
+              description: Friendly name of a device. Only returned if user signs in with a Microsoft account as part of Project Rome.
               nullable: true
             platform:
               type: string
-              description: Platform of device. Only returned if the user signs in with a Microsoft account as part of Project Rome.
+              description: Platform of device. Only returned if user signs in with a Microsoft account as part of Project Rome. Only returned if user signs in with a Microsoft account as part of Project Rome.
               nullable: true
             status:
               type: string
@@ -30906,11 +30894,11 @@ components:
       properties:
         displayName:
           type: string
-          description: The display name of the identity. This property is read-only.
+          description: 'The display name of the identity. This might not always be available or up to date. For example, if a user changes their display name, the API might show the new value in a future response, but the items associated with the user won''t show up as having changed when using delta.'
           nullable: true
         id:
           type: string
-          description: The identifier of the identity. This property is read-only.
+          description: Unique identifier for the identity.
           nullable: true
       additionalProperties:
         type: object
@@ -37477,11 +37465,11 @@ components:
       properties:
         key:
           type: string
-          description: Contains the name of the field that a value is associated with.
+          description: Key.
           nullable: true
         value:
           type: string
-          description: Contains the corresponding value for the specified key.
+          description: Value.
           nullable: true
       additionalProperties:
         type: object
