--- a/openApiDocs/v1.0/Identity.Partner.yml
+++ b/openApiDocs/v1.0/Identity.Partner.yml
@@ -520,6 +520,8 @@ paths:
                 - accessDetails desc
                 - activatedDateTime
                 - activatedDateTime desc
+                - autoExtendDuration
+                - autoExtendDuration desc
                 - createdDateTime
                 - createdDateTime desc
                 - customer
@@ -548,6 +550,7 @@ paths:
                 - id
                 - accessDetails
                 - activatedDateTime
+                - autoExtendDuration
                 - createdDateTime
                 - customer
                 - displayName
@@ -641,6 +644,7 @@ paths:
                 - id
                 - accessDetails
                 - activatedDateTime
+                - autoExtendDuration
                 - createdDateTime
                 - customer
                 - displayName
@@ -1609,11 +1613,11 @@ components:
           properties:
             displayName:
               type: string
-              description: The Azure AD display name of the customer tenant. Read-only. Supports $orderby.
+              description: The Microsoft Entra ID display name of the customer tenant. Read-only. Supports $orderby.
               nullable: true
             tenantId:
               type: string
-              description: The Azure AD-assigned tenant ID of the customer. Read-only.
+              description: The Microsoft Entra ID-assigned tenant ID of the customer. Read-only.
             serviceManagementDetails:
               type: array
               items:
@@ -1649,6 +1653,11 @@ components:
               type: string
               description: The date and time in ISO 8601 format and in UTC time when the relationship became active. Read-only.
               format: date-time
+              nullable: true
+            autoExtendDuration:
+              pattern: '^-?P([0-9]+D)?(T([0-9]+H)?([0-9]+M)?([0-9]+([.][0-9]+)?S)?)?$'
+              type: string
+              format: duration
               nullable: true
             createdDateTime:
               pattern: '^[0-9]{4,}-(0[1-9]|1[012])-(0[1-9]|[12][0-9]|3[01])T([01][0-9]|2[0-3]):[0-5][0-9]:[0-5][0-9]([.][0-9]{1,12})?(Z|[+-][0-9][0-9]:[0-9][0-9])$'
@@ -1801,11 +1810,11 @@ components:
       properties:
         displayName:
           type: string
-          description: The display name of the customer tenant as set by Azure AD. Read-only
+          description: The display name of the customer tenant as set by Microsoft Entra ID. Read-only
           nullable: true
         tenantId:
           type: string
-          description: The Azure AD-assigned tenant ID of the customer tenant.
+          description: The Microsoft Entra ID-assigned tenant ID of the customer tenant.
       additionalProperties:
         type: object
     microsoft.graph.delegatedAdminRelationshipStatus:
@@ -1829,7 +1838,7 @@ components:
       properties:
         accessContainerId:
           type: string
-          description: 'The identifier of the access container (for example, a security group). For ''securityGroup'' access containers, this must be a valid ID of an Azure AD security group in the Microsoft partner''s tenant.'
+          description: 'The identifier of the access container (for example, a security group). For ''securityGroup'' access containers, this must be a valid ID of a Microsoft Entra security group in the Microsoft partner''s tenant.'
         accessContainerType:
           $ref: '#/components/schemas/microsoft.graph.delegatedAdminAccessContainerType'
       additionalProperties:
